tests/baselines/reference/parserTypeAssertionInObjectCreationExpression1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserTypeAssertionInObjectCreationExpression1.ts (3 errors) ====
    new <T>Foo()
        ~
!!! error TS1109: Expression expected.
         ~
!!! error TS2304: Cannot find name 'T'.
           ~~~
!!! error TS2304: Cannot find name 'Foo'.